--- a/style.css
+++ b/style.css
@@ -242,43 +242,61 @@ h2 {
   letter-spacing: 1px;
 }
 @media (max-width: 600px) {
+  html, body {
+    width: 100vw;
+    max-width: 100vw;
+    overflow-x: hidden;
+  }
   .main-area {
     width: 100vw;
+    max-width: 100vw;
     padding: 2vw 0 3vw 0;
     overflow-x: hidden;
+    box-sizing: border-box;
   }
   .card-grid {
     gap: 4vw;
-    max-width: 99vw;
-    width: 99vw;
+    max-width: 92vw;
+    width: 92vw;
+    margin-left: auto;
+    margin-right: auto;
+    justify-items: center;
   }
   .card-outer {
-    width: 22vw;
-    height: 33vw;
-    min-width: 70px;
-    min-height: 110px;
+    width: 20vw;
+    height: 30vw;
+    min-width: 60px;
+    min-height: 90px;
   }
   .inputgroup, .desc, .msg {
-    max-width: 99vw;
+    max-width: 92vw;
+    margin-left: auto;
+    margin-right: auto;
   }
   h2 {
     font-size: 6vw;
+    text-align: center;
   }
   .spin-btn, .claim-btn {
-    max-width: 220px;
-    width: 90vw;
-    min-width: 120px;
+    max-width: 200px;
+    width: 80vw;
+    min-width: 100px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
   }
   .inputrow {
     flex-direction: row;
-    gap: 12px;
-    max-width: 99vw;
+    gap: 10px;
+    max-width: 92vw;
     align-items: center;
     justify-content: center;
+    margin-left: auto;
+    margin-right: auto;
   }
   .inputrow input {
-    max-width: 120px;
-    width: 40vw;
-    min-width: 80px;
+    max-width: 100px;
+    width: 35vw;
+    min-width: 60px;
   }
 }
