--- a/style.css
+++ b/style.css
@@ -48,6 +48,8 @@ h2 {
   justify-items: center;
   width: 100%;
   max-width: 480px;
+  margin-left: auto;
+  margin-right: auto;
 }
 .card-outer {
   perspective: 1200px;
