--- a/style.css
+++ b/style.css
@@ -275,6 +275,12 @@ h2 {
     height: 90px;
     border-radius: 8px;
   }
+  .card-outer img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    display: block;
+  }
   .inputgroup, .desc, .msg {
     max-width: 92vw;
     margin-left: auto;
