--- a/style.css
+++ b/style.css
@@ -248,6 +248,12 @@ h2 {
   z-index: 1;
   letter-spacing: 1px;
 }
+.face img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  display: block;
+}
 @media (max-width: 600px) {
   html, body {
     width: 100vw;
