--- a/style.css
+++ b/style.css
@@ -90,9 +90,9 @@ h2 {
 }
 .card .face img,
 .card .back img {
-  width: 54px;
-  height: 84px;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   display: block;
   margin: 0 auto;
   filter: drop-shadow(0 2px 8px #38b6ff99);
